--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/assets/CSS/style.css" />
+    <link rel="stylesheet" href="./assets/CSS/style.css" />
   </head>
   <body>
     <header>
